--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,10 @@
 	<head>
 		<title>Message Board</title>
 		<meta charset="UTF-8">
-		<meta http-equiv="Cache-Control" content="no-store" />
+		<meta http-equiv="cache-control" content="max-age=0" />
+		<meta http-equiv="cache-control" content="no-cache" />
+		<meta http-equiv="expires" content="0" />
+		<meta http-equiv="pragma" content="no-cache" />
 		<style type="text/css">
 			* {
 				margin: 0px; 
